--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,7 @@
     "prisma2": "^2.0.0-preview021",
     "ts-jest": "24.2.0",
     "ts-node": "8.5.4",
-    "ts-node-dev": "1.0.0-pre.44",
+    "ts-node-dev": "1.1.1",
     "typescript": "3.7.3"
   },
   "license": "MIT"
