--- a/server/package.json
+++ b/server/package.json
@@ -6,25 +6,25 @@
     "prisma:migrate": "prisma2 lift up"
   },
   "dependencies": {
-    "@octokit/app": "^4.1.1",
-    "@octokit/plugin-throttling": "^3.2.0",
-    "@octokit/rest": "^16.43.1",
-    "@prisma/client": "^2.0.0-preview021",
-    "body-parser": "^1.19.0",
-    "crypto": "^1.0.1",
-    "express": "^4.17.1",
+    "@octokit/app": "4.1.1",
+    "@octokit/plugin-throttling": "3.2.0",
+    "@octokit/rest": "16.43.1",
+    "@prisma/client": "2.0.0-preview021",
+    "body-parser": "1.19.0",
+    "crypto": "1.0.1",
+    "express": "4.17.1",
     "jsonwebtoken": "8.5.1",
-    "passport": "^0.4.1",
-    "passport-http-bearer": "^1.0.1"
+    "passport": "0.4.1",
+    "passport-http-bearer": "1.0.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.2",
+    "@types/express": "4.17.2",
     "@types/jsonwebtoken": "8.5.0",
     "@types/node": "12.19.12",
     "husky": "3.1.0",
     "lerna": "3.19.0",
-    "nock": "^11.7.0",
-    "prisma2": "^2.0.0-preview021",
+    "nock": "11.7.2",
+    "prisma2": "2.0.0-preview021",
     "ts-jest": "24.2.0",
     "ts-node": "8.5.4",
     "ts-node-dev": "1.1.1",
