--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
     "@octokit/app": "4.3.0",
     "@octokit/plugin-throttling": "3.4.1",
     "@octokit/rest": "16.43.2",
-    "@prisma/client": "2.0.0-preview021",
+    "@prisma/client": "2.16.1",
     "body-parser": "1.19.0",
     "crypto": "1.0.1",
     "express": "4.17.1",
@@ -24,7 +24,7 @@
     "husky": "3.1.0",
     "lerna": "3.19.0",
     "nock": "11.9.1",
-    "prisma2": "2.0.0-preview021",
+    "prisma2": "2.0.0-previewnull-1",
     "ts-jest": "24.2.0",
     "ts-node": "8.5.4",
     "ts-node-dev": "1.1.1",
